--- a/banking_system/LoanPrediction.ipynb
+++ b/banking_system/LoanPrediction.ipynb
@@ -2158,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "006547bf",
    "metadata": {},
    "outputs": [
@@ -2168,6 +2168,30 @@
      "text": [
       "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=RandomForestClassifier(), n_iter=20,\n",
+       "                   param_distributions={'max_depth': [None, 3, 5, 10, 20, 30],\n",
+       "                                        'max_features': ['auto', 'sqrt'],\n",
+       "                                        'min_samples_leaf': [1, 2, 5, 10],\n",
+       "                                        'min_samples_split': [2, 5, 20, 50,\n",
+       "                                                              100],\n",
+       "                                        'n_estimators': array([ 10,  20,  30,  40,  50,  60,  70,  80,  90, 100, 110, 120, 130,\n",
+       "       140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250, 260,\n",
+       "       270, 280, 290, 300, 310, 320, 330, 340, 350, 360, 370, 380, 390,\n",
+       "       400, 410, 420, 430, 440, 450, 460, 470, 480, 490, 500, 510, 520,\n",
+       "       530, 540, 550, 560, 570, 580, 590, 600, 610, 620, 630, 640, 650,\n",
+       "       660, 670, 680, 690, 700, 710, 720, 730, 740, 750, 760, 770, 780,\n",
+       "       790, 800, 810, 820, 830, 840, 850, 860, 870, 880, 890, 900, 910,\n",
+       "       920, 930, 940, 950, 960, 970, 980, 990])},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2176,20 +2200,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "b40e7d08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8111022257763562"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rs_rf.best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "e9aaabcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 20,\n",
+       " 'min_samples_split': 50,\n",
+       " 'min_samples_leaf': 5,\n",
+       " 'max_features': 'auto',\n",
+       " 'max_depth': 10}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rs_rf.best_params_"
    ]
@@ -2204,10 +2254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "0d2ec3c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier(max_depth=10, min_samples_leaf=5, min_samples_split=50,\n",
+      "                       n_estimators=20) accuracy is 0.7886178861788617\n",
+      "RandomForestClassifier(max_depth=10, min_samples_leaf=5, min_samples_split=50,\n",
+      "                       n_estimators=20) average cross validation score is 0.8094762095161936\n"
+     ]
+    }
+   ],
    "source": [
     "n_estimators = rs_rf.best_params_['n_estimators']\n",
     "min_samples_split = rs_rf.best_params_['min_samples_split']\n",
@@ -2225,20 +2286,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "4e9c3669",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{LogisticRegression(): 78.86179,\n",
+       " SVC(): 78.04878,\n",
+       " DecisionTreeClassifier(): 68.29268,\n",
+       " RandomForestClassifier(): 76.42276,\n",
+       " GradientBoostingClassifier(): 77.23577,\n",
+       " LogisticRegression(C=0.23357214690901212, solver='liblinear'): 78.86179,\n",
+       " SVC(C=0.25, kernel='linear'): 78.86179,\n",
+       " RandomForestClassifier(max_depth=10, min_samples_leaf=5, min_samples_split=50,\n",
+       "                        n_estimators=20): 78.86179}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_accuracy_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "1e72b514",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{LogisticRegression(): 80.61975,\n",
+       " SVC(): 80.13061,\n",
+       " DecisionTreeClassifier(): 71.82993,\n",
+       " RandomForestClassifier(): 78.34066,\n",
+       " GradientBoostingClassifier(): 77.85019,\n",
+       " LogisticRegression(C=0.23357214690901212, solver='liblinear'): 80.94629,\n",
+       " SVC(C=0.25, kernel='linear'): 80.94629,\n",
+       " RandomForestClassifier(max_depth=10, min_samples_leaf=5, min_samples_split=50,\n",
+       "                        n_estimators=20): 80.94762}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_cv_scores"
    ]
@@ -2253,10 +2352,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "49119f08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lr_model = LogisticRegression()\n",
     "lr_model.fit(X,y)\n",
@@ -2265,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "c8651d64",
    "metadata": {},
    "outputs": [],
@@ -2275,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "b56a640d",
    "metadata": {},
    "outputs": [],
@@ -2297,20 +2407,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "4d698fdb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self_Employed</th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Credit_History</th>\n",
+       "      <th>Property_Area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2889</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>180</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Gender  Married  Dependents  Education  Self_Employed  ApplicantIncome  \\\n",
+       "0       1        1           2          0              0             2889   \n",
+       "\n",
+       "   CoapplicantIncome  LoanAmount  Loan_Amount_Term  Credit_History  \\\n",
+       "0                0.0          45               180               0   \n",
+       "\n",
+       "   Property_Area  \n",
+       "0              1  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "79715aee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = model.predict(df)\n",
     "result"
