--- a/banking_system/LoanPrediction.ipynb
+++ b/banking_system/LoanPrediction.ipynb
@@ -1760,8 +1760,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassifier() accuracy is 0.7073170731707317\n",
-      "DecisionTreeClassifier() average cross validation score is 0.7101692656270824\n"
+      "DecisionTreeClassifier() accuracy is 0.6991869918699187\n",
+      "DecisionTreeClassifier() average cross validation score is 0.6987471677995469\n"
      ]
     }
    ],
@@ -1788,8 +1788,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier() accuracy is 0.7723577235772358\n",
-      "RandomForestClassifier() average cross validation score is 0.7785152605624417\n"
+      "RandomForestClassifier() accuracy is 0.7804878048780488\n",
+      "RandomForestClassifier() average cross validation score is 0.79156337465014\n"
      ]
     }
    ],
@@ -2207,7 +2207,7 @@
     {
      "data": {
       "text/plain": [
-       "0.809462881514061"
+       "0.8094628815140611"
       ]
      },
      "execution_count": 59,
@@ -2228,11 +2228,11 @@
     {
      "data": {
       "text/plain": [
-       "{'n_estimators': 660,\n",
+       "{'n_estimators': 90,\n",
        " 'min_samples_split': 50,\n",
-       " 'min_samples_leaf': 10,\n",
+       " 'min_samples_leaf': 2,\n",
        " 'max_features': 'auto',\n",
-       " 'max_depth': 20}"
+       " 'max_depth': None}"
       ]
      },
      "execution_count": 60,
@@ -2254,10 +2254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "0d2ec3c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier(min_samples_leaf=2, min_samples_split=50,\n",
+      "                       n_estimators=90) accuracy is 0.7886178861788617\n",
+      "RandomForestClassifier(min_samples_leaf=2, min_samples_split=50,\n",
+      "                       n_estimators=90) average cross validation score is 0.807823537251766\n"
+     ]
+    }
+   ],
    "source": [
     "n_estimators = rs_rf.best_params_['n_estimators']\n",
     "min_samples_split = rs_rf.best_params_['min_samples_split']\n",
@@ -2275,20 +2286,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "4e9c3669",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{LogisticRegression(): 78.86179,\n",
+       " SVC(): 78.04878,\n",
+       " DecisionTreeClassifier(): 69.9187,\n",
+       " RandomForestClassifier(): 78.04878,\n",
+       " GradientBoostingClassifier(): 76.42276,\n",
+       " LogisticRegression(C=0.23357214690901212, solver='liblinear'): 78.86179,\n",
+       " SVC(C=0.25, kernel='linear'): 78.86179,\n",
+       " RandomForestClassifier(min_samples_leaf=2, min_samples_split=50,\n",
+       "                        n_estimators=90): 78.86179}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_accuracy_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "1e72b514",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{LogisticRegression(): 80.61975,\n",
+       " SVC(): 80.13061,\n",
+       " DecisionTreeClassifier(): 69.87472,\n",
+       " RandomForestClassifier(): 79.15634,\n",
+       " GradientBoostingClassifier(): 78.01146,\n",
+       " LogisticRegression(C=0.23357214690901212, solver='liblinear'): 80.94629,\n",
+       " SVC(C=0.25, kernel='linear'): 80.94629,\n",
+       " RandomForestClassifier(min_samples_leaf=2, min_samples_split=50,\n",
+       "                        n_estimators=90): 80.78235}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_cv_scores"
    ]
